syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "fleet-dash-core/protobuf";
option csharp_namespace = "FleetDashCore.Protobuf";


service FleetDashService {
  rpc PostEveLogEvent(EveLogEvent) returns (EveLogEventResponse);
}

message EveLogEvent{
  string event = 1;
  google.protobuf.Timestamp timestamp = 2;
  string characterId = 3;
  int32 amount = 4;
  string pilot = 5;
  string ship = 6;
  string weapon = 7;
  string application = 8;
  string corporation = 9;
  string alliance = 10;
}

message EveLogEventResponse{}